# profiltek_excel_front-end

./: package-lock.json  package.json  pnpm-lock.yaml
excel_uploader/: Cargo.toml
excel_uploader/files/: 04_04_2022_Profili_cartongesso.xls  13_04_2022_Profili_cartongesso.xls  19_04_2022_Profili_cartongesso.xls  26_04_2022_Profili_cartongesso.xls
excel_uploader/src/: main.rs
src/: App.svelte
src/lib/: Counter.svelte
src/pages/: graficopovero.svelte
